[package]
name = "zfi"
description = "Zero-cost and safe interface to UEFI firmware"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ultimicro/zfi"
edition = "2021"

[dependencies]
bitflags = "2.4"
zfi-macros = { path = "macros" }

[dev-dependencies]
zfi-testing = { path = "testing" }

[workspace]
members = ["macros", "testing", "testing-macros"]
