[package]
name = "zfi"
description = "Zero-cost and safe interface to UEFI firmware"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/ultimaweapon/zfi"
edition = "2021"
rust-version = "1.81"

[dependencies]
bitflags = "2.4"
thiserror = { version = "2.0.9", default-features = false }
zfi-macros = { version = "0.1", path = "macros" }

[dev-dependencies]
zfi-testing = { path = "testing" }

[workspace]
members = ["macros", "testing", "testing-macros"]
