[package]
name = "zfi-testing-macros"
description = "Macros to be used with zfi-testing crate"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ultimicro/zfi"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = "2.0"
toml = "0.7"
